--- a/samples/Microsoft.AspNet.SignalR.Samples/packages.config
+++ b/samples/Microsoft.AspNet.SignalR.Samples/packages.config
@@ -9,11 +9,11 @@
   <package id="jQuery.UI.Combined" version="1.9.0" targetFramework="net40" />
   <package id="json2" version="1.0.2" targetFramework="net40" />
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Cors" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.Basic" version="0.24.0-pre-20725-492-dev" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Cors" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Cookies" version="2.0.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="2.1.1" targetFramework="net40" />
