--- a/tests/Microsoft.AspNet.SignalR.Tests.Common/packages.config
+++ b/tests/Microsoft.AspNet.SignalR.Tests.Common/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Cors" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Hosting" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.Basic" version="0.24.0-pre-20725-492-dev" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Cors" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Hosting" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Cookies" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Testing" version="2.0.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="xunit" version="1.9.1" targetFramework="net45" />
